SVG styling added to reset file

--- a/MVC.WebUI/Content/css/scss/reset.scss
+++ b/MVC.WebUI/Content/css/scss/reset.scss
@@ -11,39 +11,39 @@
 /* ROOT ELEMENT *********************************************************************************************************************************************************************************************/
 
 html {
-	font-family: sans-serif; /* web safe fonts: http://cssfontstack.com/ */
-	line-height: 1; /* prefer unitless numbers for line-height values: https://developer.mozilla.org/en-US/docs/Web/CSS/line-height */
-	word-wrap: break-word; /* word-wrap has been renamed to overflow-wrap */
-	overflow-wrap: break-word; /* word-wrap/overflow-wrap does not work with dynamic widths (e.g. percentage widths, tables that are not set to layout="fixed") - you will need to use word-break instead for these */
-	-webkit-font-smoothing: antialiased; /* maxvoltar.com/archive/-webkit-font-smoothing */
-	/* box-sizing (N.B. Opera & IE have never had vendor prefixes) */
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
+    font-family: sans-serif; /* web safe fonts: http://cssfontstack.com/ */
+    line-height: 1; /* prefer unitless numbers for line-height values: https://developer.mozilla.org/en-US/docs/Web/CSS/line-height */
+    word-wrap: break-word; /* word-wrap has been renamed to overflow-wrap */
+    overflow-wrap: break-word; /* word-wrap/overflow-wrap does not work with dynamic widths (e.g. percentage widths, tables that are not set to layout="fixed") - you will need to use word-break instead for these */
+    -webkit-font-smoothing: antialiased; /* maxvoltar.com/archive/-webkit-font-smoothing */
+    /* box-sizing (N.B. Opera & IE have never had vendor prefixes) */
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 /* UNIVERSAL ELEMENTS *********************************************************************************************************************************************************************************************/
 *, *:before, *:after {
-	/* http://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/ */
-	-moz-box-sizing: inherit;
-	-webkit-box-sizing: inherit;
-	box-sizing: inherit;
+    /* http://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/ */
+    -moz-box-sizing: inherit;
+    -webkit-box-sizing: inherit;
+    box-sizing: inherit;
 }
 
 /* UNIVERSAL ATTRIBUTES *********************************************************************************************************************************************************************************************/
 
 [disabled] {
-	cursor: not-allowed;
-	opacity: 0.5;
+    cursor: not-allowed;
+    opacity: 0.5;
 }
 
 [draggable="true"] {
-	cursor: move;
-	-webkit-user-drag: element; /* enables dragging in Safari */
+    cursor: move;
+    -webkit-user-drag: element; /* enables dragging in Safari */
 }
 
 [hidden] {
-	display: none; /* fix for browsers that do not support the HTML5 hidden attribute */
+    display: none; /* fix for browsers that do not support the HTML5 hidden attribute */
 }
 
 /* BLOCK-LEVEL ELEMENTS *********************************************************************************************************************************************************************************************/
@@ -70,30 +70,30 @@ address,
 video, audio,
 canvas,
 output {
-	margin: 0;
-	padding: 0;
-	border: none;
-	vertical-align: baseline;
+    margin: 0;
+    padding: 0;
+    border: none;
+    vertical-align: baseline;
 }
 
 /* HTML5 stying for older browsers - Firefox 3-3.6, Chrome 4-5, Safari 3.1-4.0, Opera 9.0-11.0 */
 article, aside, details, figcaption, figure, footer, header, main, menu, nav, section {
-	display: block;
+    display: block;
 }
 
 h1, h2, h3, h4, h5, h6, address {
-	font: inherit;
+    font: inherit;
 }
 
 p {
-	-moz-hyphens: auto; /* Firefox 6+ */
-	-webkit-hyphens: auto; /* Safari 5.1+, IOS Safari 4.3+ */
-	-ms-hyphens: auto; /* IE 10+ */
-	hyphens: auto;
+    -moz-hyphens: auto; /* Firefox 6+ */
+    -webkit-hyphens: auto; /* Safari 5.1+, IOS Safari 4.3+ */
+    -ms-hyphens: auto; /* IE 10+ */
+    hyphens: auto;
 }
 
 template, dialog {
-	display: none; /* fix for browsers that do not support the HTML5 <template> or <dialog> tags - browser support: Firefox 22+, Chrome 26+, Safari 8+, IOS Safari 8+, Opera 15+ */
+    display: none; /* fix for browsers that do not support the HTML5 <template> or <dialog> tags - browser support: Firefox 22+, Chrome 26+, Safari 8+, IOS Safari 8+, Opera 15+ */
 }
 
 /* INLINE ELEMENTS *********************************************************************************************************************************************************************************************/
@@ -114,17 +114,17 @@ sub, sup,
 ruby, rt, rp,
 bdi, bdo,
 span {
-	vertical-align: baseline;
+    vertical-align: baseline;
 }
 
 code, var, samp, kbd {
-	font-family: "Courier New", Courier, monospace;
-	font-size: 0.85em;
-	font-size: 0.85rem;
+    font-family: "Courier New", Courier, monospace;
+    font-size: 0.85em;
+    font-size: 0.85rem;
 }
 
 abbr {
-	speak: spell-out;
+    speak: spell-out;
 }
 
 abbr[title] {
@@ -142,11 +142,11 @@ abbr[title] {
 
 /* definition - marks the first occurrence of a term */
 dfn::before {
-	content: open-quote;
+    content: open-quote;
 }
 
 dfn::after {
-	content: close-quote;
+    content: close-quote;
 }
 
 /* sup & sub - stops them affecting the line-height */
@@ -167,34 +167,34 @@ sub {
 /* LIST ELEMENTS *********************************************************************************************************************************************************************************************/
 
 ul, ol {
-	list-style: none;
+    list-style: none;
 }
 
 /* TABLE ELEMENTS *********************************************************************************************************************************************************************************************/
 table, thead, tfoot {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
-	empty-cells: show;
-	table-layout: auto;
+    border-collapse: collapse;
+    border-spacing: 0;
+    empty-cells: show;
+    table-layout: auto;
 }
 
 th, td {
-	text-align: left;
-	vertical-align: top;
-	padding: 0;
+    text-align: left;
+    vertical-align: top;
+    padding: 0;
 }
 
 th {
-	font-weight: bold;
+    font-weight: bold;
 }
 
 caption {
-	caption-side: top;
+    caption-side: top;
 }
 
 /* FORM ELEMENTS *********************************************************************************************************************************************************************************************/
@@ -210,77 +210,83 @@ caption {
 */
 
 label[for] {
-	cursor: pointer;
+    cursor: pointer;
 }
 
 /* all form fields */
 input, textarea, select, button {
-	font-family: inherit; /* do not use font - do not want to inherit line-height */
-	font-size: inherit;
-	outline: none;
-	/* box-sizing - can be deleted if using univeral selector to add box-sizing */
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
+    font-family: inherit; /* do not use font - do not want to inherit line-height */
+    font-size: inherit;
+    outline: none;
+    /* box-sizing - can be deleted if using univeral selector to add box-sizing */
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-	/* Checkbox/Radio Fields */
-	input[type="checkbox"],
-	input[type="radio"] {
-		cursor: pointer;
-	}
+/* Checkbox/Radio Fields */
+input[type="checkbox"],
+input[type="radio"] {
+    cursor: pointer;
+}
 
-	/* Buttons */
-	input[type="submit"],
-	input[type="reset"],
-	input[type="button"],
-	button {
-		cursor: pointer;
-		-webkit-appearance: none;
-	}
+/* Buttons */
+input[type="submit"],
+input[type="reset"],
+input[type="button"],
+button {
+    cursor: pointer;
+    -webkit-appearance: none;
+}
 
-	input[type="image"],
-	input[type="file"] {
-		cursor: pointer;
-	}
+input[type="image"],
+input[type="file"] {
+    cursor: pointer;
+}
 
-	input[readonly] {
-		border: none;
-		background-color: transparent;
-		font: inherit;
-		line-height: inherit;
-		vertical-align: baseline;
-	}
+input[readonly] {
+    border: none;
+    background-color: transparent;
+    font: inherit;
+    line-height: inherit;
+    vertical-align: baseline;
+}
 
-	/* removes the extra padding and border on buttons and input tags for Firefox browsers
+/* removes the extra padding and border on buttons and input tags for Firefox browsers
 			   http://css-tricks.com/forums/topic/button-padding-issue/ */
-	button::-moz-focus-inner,
-	input[type="button"]::-moz-focus-inner,
-	input[type="submit"]::-moz-focus-inner,
-	input[type="reset"]::-moz-focus-inner {
-		padding: 0;
-		border: 0;
-	}
+button::-moz-focus-inner,
+input[type="button"]::-moz-focus-inner,
+input[type="submit"]::-moz-focus-inner,
+input[type="reset"]::-moz-focus-inner {
+    padding: 0;
+    border: 0;
+}
 
 textarea {
-	min-height: 1.5em;
-	overflow: auto; /* removes unnecessary scrollbars in IE */
-	resize: vertical;
+    min-height: 1.5em;
+    overflow: auto; /* removes unnecessary scrollbars in IE */
+    resize: vertical;
 }
 
 select {
-	cursor: pointer;
+    cursor: pointer;
 }
 
 /* EMBEDDED CONTENT *********************************************************************************************************************************************************************************************/
 audio, video,
 iframe, object, embed {
-	margin: 0;
-	padding: 0;
-	border: none;
+    margin: 0;
+    padding: 0;
+    border: none;
 }
 
 img {
-	border: none;
-	text-align: center;
+    border: none;
+    text-align: center;
+}
+
+
+/* SVG *********************************************************************************************************************************************************************************************/
+svg {
+    fill: currentColor;
 }
