--- a/MVC.WebUI/Content/css/scss/reset.scss
+++ b/MVC.WebUI/Content/css/scss/reset.scss
@@ -33,8 +33,8 @@ html {
 /* UNIVERSAL ATTRIBUTES *********************************************************************************************************************************************************************************************/
 
 [disabled] {
-    cursor: not-allowed;
     opacity: 0.5;
+    cursor: not-allowed;
 }
 
 [draggable="true"] {
@@ -70,10 +70,10 @@ address,
 video, audio,
 canvas,
 output {
+    display: block;
     margin: 0;
     padding: 0;
     border: none;
-    vertical-align: baseline;
 }
 
 /* HTML5 stying for older browsers - Firefox 3-3.6, Chrome 4-5, Safari 3.1-4.0, Opera 9.0-11.0 */
@@ -92,7 +92,8 @@ p {
     hyphens: auto;
 }
 
-template, dialog {
+template,
+dialog {
     display: none; /* fix for browsers that do not support the HTML5 <template> or <dialog> tags - browser support: Firefox 22+, Chrome 26+, Safari 8+, IOS Safari 8+, Opera 15+ */
 }
 
@@ -114,6 +115,7 @@ sub, sup,
 ruby, rt, rp,
 bdi, bdo,
 span {
+    display: inline;
     vertical-align: baseline;
 }
 
@@ -164,6 +166,21 @@ sub {
 }
 
 
+/* ANCHOR LINKS *********************************************************************************************************************************************************************************************/
+
+/*
+	ORDER:
+	1. a:link - link must have an href for this to work
+	2. a:visited
+	3. a:focus
+	4. a:hover
+	5. a:active
+*/
+
+a:active {
+    cursor: wait;
+}
+
 /* LIST ELEMENTS *********************************************************************************************************************************************************************************************/
 
 ul, ol {
@@ -177,16 +194,16 @@ table, thead, tfoot {
 }
 
 table {
+    table-layout: auto;
     border-collapse: collapse;
     border-spacing: 0;
     empty-cells: show;
-    table-layout: auto;
 }
 
 th, td {
+    padding: 0;
     text-align: left;
     vertical-align: top;
-    padding: 0;
 }
 
 th {
@@ -246,10 +263,10 @@ input[type="file"] {
 
 input[readonly] {
     border: none;
-    background-color: transparent;
     font: inherit;
     line-height: inherit;
     vertical-align: baseline;
+    background-color: transparent;
 }
 
 /* removes the extra padding and border on buttons and input tags for Firefox browsers
