--- a/MVC.WebUI/Views/Shared/_layout.cshtml
+++ b/MVC.WebUI/Views/Shared/_layout.cshtml
@@ -65,8 +65,10 @@
     <!--[if lte IE 8]>
         <link type="text/css" rel="stylesheet" href="~/content/css/website_ie.css" />
         <link type="image/x-icon" rel="shortcut icon" href="~/favicon.ico" />
+        <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <script src="~/content/scripts/html5-shiv.js"></script>
     <![endif]-->
+
     @*For framebusting:*@
     <base target="_top" />
 
