--- a/MVC.WebUI/Content/css/scss/website/fonts.scss
+++ b/MVC.WebUI/Content/css/scss/website/fonts.scss
@@ -3,10 +3,10 @@ FONTS - custom fonts for site defined by @font-face
 ******************************************************************************************************************************************/
 
 /*
-WOFF 2.0 (.woff) supported by Chrome 36+, Opera 23+
-WOFF (.woff) supported by Firefox 3.6+, Internet Explorer 9+, Chrome 6+, Opera 11.10+
-TrueType (.ttf) supported by Firefox 3.5+, Chrome 4+, Safari 3.1+, Opera 10+
-OpenType (.otf) supported by Firefox 3.5+, Chrome 4+, Safari 3.1+, Opera 10+
+WOFF 2.0 (.woff2) supported by Firefox 39+, Chrome 36+, Opera 23+
+WOFF (.woff) supported by Firefox 3.6+, Internet Explorer 9+, Chrome 5+, Safari 5.1+, Safari IOS 5.1+, Opera 11.10+
+TrueType (.ttf) supported by Firefox 3.5+, Chrome 4+, Safari 3.1+, Opera 10+, Edge
+OpenType (.otf) supported by Firefox 3.5+, Chrome 4+, Safari 3.1+, Opera 10+, Edge
 Scalable Vector Graphics (.svg) supported by Safari 3+, Opera 9+ (8+)
 Embedded OpenType (.eot) supported by Internet Explorer 4+
 */
@@ -18,6 +18,8 @@ https://css-tricks.com/snippets/css/using-font-face/
 
 @font-face {
 	font-family: 'MyWebFont';
+    font-style: normal;
+    font-weight: 400;
 	src: url('webfont.eot'); /* IE9 Compat Modes */
 	src: url('webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
 	     url('webfont.woff') format('woff'), /* Modern Browsers */
@@ -51,5 +53,44 @@ http://www.paulirish.com/2009/bulletproof-font-face-implementation-syntax/
 			url("/fonts/MyFontFamily-bold.svg#MyFontFamily") format("svg");
 	font-weight: bold;
 	font-style: normal;
+}
+*/
+
+
+/*
+GOOGLE FONTS EXAMPLE:
+
+The style sheets can be accessed by using the following link with the font name on the end
+(it serves different font types for different browser, according to support - use Chrome to get latest versions):
+https://fonts.googleapis.com/css?family=Varela+Round
+
+@font-face {
+  font-family: 'Varela Round';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Varela Round'), local('VarelaRound-Regular'), url(https://fonts.gstatic.com/s/varelaround/v6/APH4jr0uSos5wiut5cpjrnhCUOGz7vYGh680lGh-uXM.woff) format('woff');
+}
+
+@font-face {
+  font-family: 'Varela Round';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Varela Round'), local('VarelaRound-Regular'), url(https://fonts.gstatic.com/s/varelaround/v6/APH4jr0uSos5wiut5cpjrugdm0LZdjqr5-oayXSOefg.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+}
+
+
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v15/fIKu7GwZTy_12XzG_jt8eA.woff2) format('woff2');
+}
+
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 900;
+  src: local('Roboto Black'), local('Roboto-Black'), url(https://fonts.gstatic.com/s/roboto/v15/9_7S_tWeGDh5Pq3u05RVkltXRa8TVwTICgirnJhmVJw.woff2) format('woff2');
 }
 */
