--- a/MVC.WebUI/Views/Shared/_layout.cshtml
+++ b/MVC.WebUI/Views/Shared/_layout.cshtml
@@ -17,6 +17,11 @@
 <head>
     <meta charset="utf-8" />
     <title>@ViewBag.Title</title>
+
+    @*Mobile device settings*@
+    @*https://css-tricks.com/probably-use-initial-scale1/*@
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+
     @*www.phpied.com/conditional-comments-block-downloads - not needed if using the conditional stylesheets hack on the <html> tag /*@
     <!--[if IE]><![endif]-->
     @*
@@ -36,14 +41,10 @@
         </configuration>
     *@
 
-    <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><![endif]-->
+    <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
     <meta name="Description" content="@ViewBag.Description" /> @*max length c. 155 characters*@
     <meta name="Keywords" content="@ViewBag.Keywords" />
     <meta name="Author" content="Paul Arnold" />
-
-    @*Mobile device settings*@
-    @*https://css-tricks.com/probably-use-initial-scale1/*@
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
     @Styles.Render("~/css/website")
 
