--- a/MVC.WebUI/Views/Account/login.cshtml
+++ b/MVC.WebUI/Views/Account/login.cshtml
@@ -1,41 +1,48 @@
 ﻿@model MVC.WebUI.Models.Account.LoginViewModel
+@using MVC.WebUI.Helpers
 
 @{
-	ViewBag.Title = "Login";
+    ViewBag.Title = "Log In";
 }
 
 <article>
-	<h1>Login</h1>
+    <h1>Login</h1>
 
-	@if (TempData["SuccessMessage"] != null)
-	{
-		<section class="alert success">
-			<p>@TempData["SuccessMessage"]</p>
-		</section>
-	}
-    
-    @Html.ValidationSummary(false)
+    @if (TempData["SuccessMessage"] != null)
+    {
+        <section class="alert success">
+            <p>@TempData["SuccessMessage"]</p>
+        </section>
+    }
 
-	@using (Html.BeginForm(new { ReturnUrl = ViewBag.ReturnUrl }))
-	{
-		@Html.AntiForgeryToken()
-		<ol>
-			<li>
-				@Html.LabelFor(m => m.UserName)
-				@Html.TextBoxFor(m => m.UserName, new { required = "required", maxlength = "30", autofocus = "autofocus" })
-				@Html.ValidationMessageFor(m => m.UserName)
-			</li>
-			<li>
-				@Html.LabelFor(m => m.Password)
-				@Html.PasswordFor(m => m.Password, new { required = "required", minlength = "8" })
-				@Html.ValidationMessageFor(m => m.Password)
-			</li>
+    @*http://stackoverflow.com/questions/12107263/why-is-validationsummarytrue-displaying-an-empty-summary-for-property-errors*@
+    @if (ViewContext.ViewData.ModelState.Where(x => x.Key == string.Empty).Any())
+    {
+        Html.ValidationSummary(false);
+    }
+
+    @Html.CustomValidationSummary(false)
+
+    @using (Html.BeginForm(new { ReturnUrl = ViewBag.ReturnUrl }))
+    {
+        @Html.AntiForgeryToken()
+        <ol>
+            <li>
+                @Html.LabelFor(m => m.UserName)
+                @Html.TextBoxFor(m => m.UserName, new { required = "required", maxlength = "30", autofocus = "autofocus" })
+                @Html.ValidationMessageFor(m => m.UserName)
+            </li>
+            <li>
+                @Html.LabelFor(m => m.Password)
+                @Html.PasswordFor(m => m.Password, new { required = "required", minlength = "8" })
+                @Html.ValidationMessageFor(m => m.Password)
+            </li>
             <li>
                 @Html.CheckBoxFor(m => m.Persist)
                 @Html.LabelFor(m => m.Persist, "Remain logged in for 7 days")
             </li>
-		</ol>
-		@Html.ActionLink("Forgotten Password", "request-password")
-		<button>Login</button>
-	}
+        </ol>
+        @Html.ActionLink("Forgotten Password", "request-password")
+        <button>Login</button>
+    }
 </article>
