Error handling rewritten
Based on advice given at
http://benfoster.io/blog/aspnet-mvc-custom-error-pages.

--- a/MVC.WebUI/Content/css/scss/website/bootstrap.scss
+++ b/MVC.WebUI/Content/css/scss/website/bootstrap.scss
@@ -12,6 +12,33 @@
 
 
 /************************************************************************************************************************************************************************************/
+/* 'SKIP TO MAIN CONTENT' LINK */
+/************************************************************************************************************************************************************************************/
+
+.skip {
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 99999999;
+    display: block;
+    padding: 0.375rem;
+    border: 1px solid #FFF;
+    border-top: none;
+    border-left: none;
+    color: #FFF;
+    transform: translateY(-100%);
+    -webkit-transition: transform 1s ease-out, background-color 1s linear;
+    transition: transform 1s ease-out, background-color 1s linear;
+}
+
+.skip:focus {
+    background-color: #BF1722;
+    outline: 0;
+    transform: translateY(0);
+}
+
+
+/************************************************************************************************************************************************************************************/
 /* LAYOUTS */
 /************************************************************************************************************************************************************************************/
 
