Further changes to IAuthenticationService

--- a/MVC.WebUI/Views/Account/request-password.cshtml
+++ b/MVC.WebUI/Views/Account/request-password.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Request New Password";
 }
 
-<article>
+<section>
 	<h1>Request New Password</h1>
 
 	@if (TempData["ResetPasswordFail"] != null)
@@ -26,5 +26,5 @@
 		</ol>
 		<button>Request New Password</button>
 	}
-</article>
+</section>
 
